# 2021-AoC

./: .gitignore  AoC.code-workspace  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: day01.rs  day03.rs  day04.rs  day05.rs  jazz_parser.rs  lib.rs  main.rs  year_2021.rs  year_2022.rs  year_2023.rs
src/aoc_lib/: jazz_data.rs  jazz_parser.rs  mod.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
src/days/day22/: full_cuboid.rs  mod.rs
src/days/day23/: basic.rs  complex.rs
src/year_2021/: day06.rs  day09.rs  day10.rs  day12.rs  day13.rs  day16.rs  day20.rs  day22.rs  day24.rs
src/year_2021/day23/: complex.rs  mod.rs
src/year_2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs
src/year_2023/: day01.rs  day02.rs
