[package]
name = "advent_of_code"
version = "0.2.0"
authors = ["Michele Bianchi <jazzinghen@gmail.com>"]
description = "Solutions for Advent of Code written in Rust"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Jazzinghen/AdventOfCode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[profile.test]
strip = true
opt-level = 3

[dependencies]
clap = {version = "4.0.29", features = ["derive", "unicode"]}
itertools = "0.10.5"
nom = "7.1.1"
hashbrown = "0.13.1"
indextree = "4.5"
nalgebra = "0.31.4"
rayon = "1.6"
