[package]
name = "advent_of_code"
version = "0.3.0"
authors = ["Michele Bianchi <jazzinghen@gmail.com>"]
description = "Solutions for Advent of Code written in Rust"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Jazzinghen/AdventOfCode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[profile.test]
strip = true

[dependencies]
ansi_term = "0.12"
clap = {version = "4.0.29", features = ["derive", "unicode"]}
hashbrown = "0.13.1"
indextree = "4.5"
itertools = "0.10.5"
nalgebra = "0.31.4"
nom = "7.1.1"
num = "0.4.0"
petgraph = "0.6.2"
rayon = "1.6"
take-until = "0.1.0"
