[package]
name = "advent_of_code"
version = "0.3.0"
authors = ["Michele Bianchi <jazzinghen@gmail.com>"]
description = "Solutions for Advent of Code written in Rust"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Jazzinghen/AdventOfCode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[profile.test]
strip = true

[dependencies]
ansi_term = "0.12"
clap = {version = "4.4.10", features = ["derive", "unicode"]}
hashbrown = "0.14.3"
indextree = "4.6"
itertools = "0.12.0"
nalgebra = "0.32.3"
nom = "7.1.3"
num = "0.4.1"
petgraph = "0.6.4"
rayon = "1.8"
take-until = "0.2.0"
